--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Reset */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+button {
+  cursor: pointer;
+}
+
 body {
-  background-color: aqua;
+  font-family: 'Lato', sans-serif;
+}
+
+:root {
+  --blue-: rgba(0, 74, 173, 1);
+}
+
+/* Header */
+
+.header_navbar {
+  background-color: var(--blue-);
 }
