--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -20,10 +20,21 @@ body {
 
 :root {
   --blue-: rgba(0, 74, 173, 1);
+  --dark_blue-: rgb(0, 60, 138);
 }
 
 /* Header */
 
 .header_navbar {
   background-color: var(--blue-);
+}
+
+/* Buttons */
+
+.blue_button {
+  background-color: var(--blue-);
+  color: white;
+}
+.blue_button:hover {
+  background-color: var(--dark_blue-);
 }
