Adding Team section & favicon

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -33,6 +33,14 @@ body {
   background-color: var(--dark_blue-);
 }
 
+.white_button {
+  background-color: white;
+  color: var(--blue-);
+}
+.white_button:hover {
+  color: var(--dark_blue-);
+}
+
 /* sections */
 
 .blue_section {
