--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -21,7 +21,6 @@ body {
 :root {
   --blue-: rgba(0, 74, 173, 1);
   --dark_blue-: rgba(0, 60, 138, 1);
-  --purple-: rgba(142, 31, 133, 1);
 }
 
 /* Background color */
@@ -35,7 +34,21 @@ body {
   color: black;
 }
 
-/* titles */
+/* Links color */
+.link_blue {
+  color: var(--blue-);
+}
+.link_blue:hover {
+  color: var(--dark_blue-);
+}
+.link_white {
+  color: white;
+}
+.link_white:hover {
+  color: black;
+}
+
+/* Titles */
 
 h1 {
   font-weight: 700;
